# CareerGrowth

./: .env.example  GET-STARTED.md  HOW-TO-GUIDE.md  README.md  main.py
ai/: config.py
ai/chains/: cv_chain.py
ai/chains/llm/: llm.py
ai/loaders/: pdf_loader.py
ai/parsers/: cv_parser.py
ai/prompts/: cv_prompts.py
ai/schemas/: cv_profile.py
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py
backend/app/api/: me.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_db.py  test_errors.py
docs/: README.md  architecture.md  backend.md  decisions.md  frontend.md
docs/superpowers/plans/: 2026-07-23-foundation.md
docs/superpowers/specs/: 2026-07-23-careerfarm-architecture.md  2026-07-23-foundation-design.md
frontend/: app.py  package-lock.json  package.json
frontend/assets/: styles.css
frontend/components/: sidebar.py
frontend/pages/: dashboard.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/brand/: logo.tsx
frontend/src/components/farm/: farm-plot.tsx  plant.tsx
frontend/src/components/landing/: closing-cta.tsx  connected.tsx  count-up.tsx  features.tsx  hero.tsx  landing-nav.tsx  motion-provider.tsx  reveal.tsx  site-footer.tsx  stats.tsx  steps.tsx
frontend/src/components/layout/: page-header.tsx  page-stub.tsx  (+3 more)
frontend/src/lib/: growth.ts  nav.ts  services.ts
frontend/src/types/: index.ts
(+13 files in other folders)
