[project]
name = "careerfarm-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]
